nfspv-pod.yaml
apiVersion: v1
kind: Pod
metadata:
   name: www
   labels:
     name: www
spec:
   containers:
   - name: www
     image: nginx:alpine
     ports:
       - containerPort: 80
         name: www
     volumeMounts:
       - name: nfs-vol
         mountPath: /usr/share/nginx/html
   volumes:
     - name: nfs-vol
       persistentVolumeClaim:
         claimName: nfs-claim
