redis-pod.yaml
apiVersion: v1
kind: Pod
metadata:
        name: redis
spec:
        containers:
                - name: redis
                  image: redis
                  ports:
                          - containerPort: 6379
                  resources:
                          limits:
                                  cpu: "0.1"
                  volumeMounts:
                          - mountPath: /redis-master-data
                            name: data
                          - mountPath: /redis-master
                            name: config
        volumes:
                - name: data
                  emptyDir: {}
                - name: config
                  configMap:
                          name: example-redis-config
                          items:
                                  - key: redis-config
                                    path: redis.conf
